@@ -5,6 +5,8 @@
 Version 1.4.21 - SVN
 --------------------
   - Now allow more than one plugin to control the compose form submit action.
+  - When sorting by received date, the received date is now shown on the
+    message list.
 
 Version 1.4.20 - 06 Mar 2010
 ---------------------------
